--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@supabase/supabase-js": "^2.23.0",
     "expo": "~48.0.15",
+    "expo-file-system": "~15.2.2",
+    "expo-image-picker": "~14.1.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
