--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@supabase/supabase-js": "^2.23.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~48.0.15",
     "expo-file-system": "~15.2.2",
     "expo-image-picker": "~14.1.1",
