--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@supabase/supabase-js": "^2.23.0",
+    "chalk": "^5.2.0",
     "expo": "~48.0.15",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-animated-accordion": "^1.1.0",
     "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
