--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-animated-accordion": "^1.1.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-modal": "^13.0.1",
     "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
