--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-elements": "^3.4.3",
     "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
