--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-elements": "^3.4.3",
+    "react-native-screens": "^3.22.0",
     "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
