Update README, add license & remove locally running supabase due to it not working on supabase's end.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "clean": "npm i && expo start --clear",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "db:start": "npx supabase start",
-    "db:stop": "npx supabase stop"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
